--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,9 +5,19 @@ body {
 .logo {
     margin-left: auto;
     margin-right: auto;
-    display: block;
+    display: block;    
 }
 
 .form {
     display: inline-block;
+}
+
+.full-form{
+    width: 50%;
+    height: 50%;
+    overflow: auto;
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    
 }
