--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -46,6 +46,8 @@ li {
 a {
     display: block;
     padding: 8px;
+    text-decoration: none;
+    color: black;
 }
 
 button {
@@ -90,11 +92,12 @@ button a:hover {
     display: block;
     margin-top: 10px;
 }
-.nav-bar ul {
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: #f2f2f2;  
 }
  
 .footer ul {
@@ -104,5 +107,9 @@ button a:hover {
   padding: 0;
   overflow: hidden;
   float: left;
-  
+  background-color: #f2f2f2;
+}
+
+.top-nav a:hover{
+    text-decoration: underline;
 }
