--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -44,7 +44,7 @@ button {
     -moz-appearance: button;
     appearance: button;
     border: none;
-    padding: 0.5%;
+    padding: 2%;
     color: #9ab0af;
     background-color: #f2f2f2;
 }
@@ -106,4 +106,31 @@ button a:hover {
 
 .topnav a:hover {
     color: black;
+}
+
+.footer {
+    background-color: f2f2f2;
+    border: 1px solid #e4e4e4;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.footer a {
+    float: left;
+    color: #7a7b83;
+    text-align: center;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 10px;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
+
+.left-text {
+    float: right;
+    margin-right: 10px;
 }
