--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -6,7 +6,6 @@ input{
     border: none;
     padding: 10px;
     margin: 10px;
-    height: 20px;
     width: 500px;
     border:1px solid #eaeaea;
     outline:none;
@@ -20,24 +19,11 @@ input:focus{
     border-color:#4d90fe;
 }
 
-input[type="submit"] {
-    border-radius: 2px;
-    background: #f2f2f2;
-    border: 1px solid #f2f2f2;
-    color: #757575;
-    cursor: default;
-    font-size: 14px;
-    font-weight: bold;
-    width: 100px;
-    padding: 0 16px;
-    height:36px;
-}
-input[type="submit"]:hover {
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    background: #f8f8f8;
-    border: 1px solid #c6c6c6;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    color: #222;
+input[type="text"]{
+    border-radius: 20px;
+    font-size: 15px;
+    height: 40px;
+    box-shadow: 0px 0.5px 3px 0.5px #f2f2f2;
 }
 
 button {
