--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -156,7 +156,7 @@ button a:hover {
 }
 #searchBar{
     background: url(../images/microphone.png) no-repeat;
-    background-size: 20spx;
+    background-size: 20px;
     background-position: right;
     background-origin: content-box;
 }
